--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.6",
+    "axios": "^0.21.1",
     "next": "10.2.3",
     "postcss": "^8.2.13",
     "react": "17.0.2",
