--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^2.1.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@types/react": "^17.0.9",
     "typescript": "^4.3.2"
   }
