--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.2.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^0.5.6",
     "tailwindcss": "^2.1.4"
   },
   "devDependencies": {
