--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
     "@types/node": "^15.6.2",
     "concurrently": "^6.2.0",
     "morgan": "^1.10.0",
@@ -27,6 +28,7 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql": "^2.14.1",
     "reflect-metadata": "^0.1.10",
     "typeorm": "0.2.33",
